# Sonata

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yaml
docs/: tutorial.ipynb  tutorial.md
src/sonata/: __init__.py  consts.py  plot.py  utils.py
src/sonata/initialization/: initialize.py
src/sonata/models/: __init__.py  _utils_cornet.py  _utils_corrnmf.py  cornet.py  corrnmf.py  klnmf.py  mvnmf.py  nmf.py  signature_nmf.py
tests/: test_cornet.py  test_corrnmf.py  test_initialization.py  test_klnmf.py  test_mmcorrnmf.py  test_mvnmf.py  test_nmf.py  test_plot.py  test_utils_klnmf.py  test_utils_nmf.py
tests/test_data/models/nmf/: H_updated_joint_nsigs2.npy  W_updated_joint_nsigs1.npy  W_updated_joint_nsigs2.npy
