[tool.poetry]
name = "sonata-learn"
version = "0.1.0"
description = "A Python toolkit for nonnegative matrix factorization-based signature analysis"
license = "MIT"
authors = ["Benedikt Geiger"]
maintainers = [
    "Benedikt Geiger <benedikt_geiger@g.harvard.edu>",
]
packages = [{ include = "sonata", from = "src" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
adjustText = ">=1.3,<2"
anndata = ">=0.11,<0.13"
fastcluster = ">=1.2.6,<2"
matplotlib = ">=3.8,<4"
numba = ">=0.61,<0.63"
numpy = ">=1.26,<3"
pandas = ">=2.2,<3"
scikit-learn = ">=1.6,<2"
scipy = ">=1.13,<2"
seaborn = ">=0.13,<0.14"
umap-learn = ">=0.5.7,<0.6"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.15,<2"
pandas-stubs = ">=2.2,<3"
pytest = ">=8.3,<9"
pre-commit = ">=4.2,<5"
tox = ">=4.25,<5"
types-seaborn = ">=0.13,<0.14"

[tool.pytest.ini_options]
# /site-packages/umap/__init__.py:36: DeprecationWarning: pkg_resources is deprecated as an API.
filterwarnings = [
    "ignore::DeprecationWarning:umap.*:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
