[project]
name = "sonata-learn"
version = "0.1.0"
description = "A Python toolkit for fitting and analyzing mutational signatures"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { name = "Benedikt Geiger", email = "benedikt_geiger@g.harvard.edu" },
]
maintainers = [
    { name = "Benedikt Geiger", email = "benedikt_geiger@g.harvard.edu" },
]
keywords = [
    "AnnData",
    "bioinformatics",
    "cancer genomics",
    "mutational signatures",
    "NMF",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "adjustText>=1.3,<2",
    "anndata>=0.11,<0.13",
    "fastcluster>=1.2.6,<2",
    "matplotlib>=3.8,<4",
    "numba>=0.61,<0.63",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "scikit-learn>=1.6,<2",
    "scipy>=1.13,<2",
    "seaborn>=0.13,<0.14",
    "umap-learn>=0.5.7,<0.6",
]

[project.urls]
Homepage = "https://github.com/parklab/Sonata"
Repository = "https://github.com/parklab/Sonata"
Documentation = "https://github.com/parklab/Sonata/blob/main/docs/tutorial.md"

[tool.poetry]
packages = [{ include = "sonata", from = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.15,<2"
pandas-stubs = ">=2.2,<3"
pytest = ">=8.3,<9"
pre-commit = ">=4.2,<5"
tox = ">=4.25,<5"
types-seaborn = ">=0.13,<0.14"

[tool.pytest.ini_options]
# /site-packages/umap/__init__.py:36: DeprecationWarning: pkg_resources is deprecated as an API.
filterwarnings = [
    "ignore::DeprecationWarning:umap.*:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
